# e2-tts-pytorch

./: README.md  e2_collate.py  e2_dataset.py  e2_trainer.py  pyproject.toml  train_e2.py  train_example.py
e2_tt2_pytorch/: e2_tts.py
e2_tts_pytorch/: __init__.py  e2_tts.py  tensor_typing.py  trainer.py
e2_tts_pytorch/dataset/: e2_collate.py  e2_dataset.py
e2_tts_pytorch/trainer/: e2_trainer.py
e2_tts_pytorch/utils/: compute_mel.py
utils/: compute_mel.py
