[project]
name = "e2-tts-pytorch"
version = "0.7.0"
description = "E2-TTS in Pytorch"
authors = [
    { name = "Phil Wang", email = "lucidrains@gmail.com" }
]
readme = "README.md"
requires-python = ">= 3.8"
license = { file = "LICENSE" }
keywords = [
    'artificial intelligence',
    'deep learning',
    'transformers',
    'attention mechanism',
    'text to speech'
  ]
classifiers=[
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.8',
  ]

dependencies = [
    'accelerate>=0.33.0',
    'einops>=0.8.0',
    'einx>=0.3.0',
    'ema-pytorch>=0.5.2',
    'gateloop-transformer>=0.2.2',
    'g2p-en',
    'jaxtyping',
    'loguru',
    'scipy',
    'tensorboard',
    'torch>=2.0',
    'torchdiffeq',
    'torchaudio>=2.3.1',
    'tqdm>=4.65.0',
    'x-transformers>=1.31.14',
]

[project.urls]
Homepage = "https://pypi.org/project/e2-tts-pytorch/"
Repository = "https://github.com/lucidrains/e2-tts-pytorch"

[project.optional-dependencies]
examples = ["datasets"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["e2_tts_pytorch"]
